* open-source-paper:   smaller figures

--- a/spark/doc/papers/2013/opensource.tex
+++ b/spark/doc/papers/2013/opensource.tex
@@ -5,6 +5,7 @@
 \usepackage{textcomp} % for \textdegree
 \usepackage[hidelinks]{hyperref}
 \usepackage{cleveref}
+\crefname{figure}{Fig.}{Fig.}
 \usepackage{xstring}
 \usepackage{booktabs}
 \usepackage{tikz}
@@ -68,20 +69,27 @@ Using simulation for algorithm development and testing makes thing easier.
 SimSpark was initially developed by Marco Kögler and Oliver Obst at the University of Koblenz-Landau in Koblenz, Germany\cite{OR05}.
 The project was registered as open source project in SourceForge\footnote{\url{http://simspark.sourceforge.net}} in 2004, it has an established code base with development increasing year-over-year\cite{Boedecker2008,usermanual}.
 
+
+
 \todo[inline]{Plugin system, core part}
+In comparison to specialized simulators, users can create new simulations by using a scene description language.
+
+It served from the beginning as a test bed and a guide for essential new features that were added to the simulator during development. However changes to the simulator core were never customized for the soccer simulation. Instead generic simulator services were implemented with all soccer specific details contained in a set of plugins.
+
 Agents communicate with the simulation server via UDP or TCP, and therefore can be implemented in any language that supports such sockets.\todo{integrated agent as well}
 Multiple software agents can participate in one simulation.
 
 Simulations are created within the server using the Ruby language and text-based RSG files.
 SimSpark uses the Open Dynamics Engine (ODE) for detecting collisions and for simulating rigid body dynamics. ODE allows accurate simulation of the physical properties of objects such as velocity, inertia and friction.
 
-\todo[inline]{documents, wiki}
-
 \todo[inline]{Releated work: SimRobot, Webots, V-REP, Gazebo...}
 
 
 \section{Current state / development since 2008}
 Because last paper about simspark was in 2008
+
+The soccer simulation for this tournament was developed in parallel with the SimSpark simulator. In its initial version players were modeled as spheres in a physical three dimensional world. Since then SimSpark grew considerably and now supports humanoid players with articulated bodies.
+
 \subsection{Architectural Changes (?)}
 \todo[inline]{separation of simspark and rcssserver3d}
 \todo[inline]{Cmake migration?}
@@ -123,8 +131,8 @@ So the physics computation and \textit{SimControlNode}s can run in parallel.\tod
 
 \todo[inline]{logfiles}
 
-\section{Recent Development (Changes 2013)}
-
+\section{Experimental Features}
+These features are experimental, they (probably) will be used in RoboCup 2013 for the first time. (Some of them are still under the development)
 
 \subsection{Realistic Motor}
 \todo{motivation: my email...}
@@ -205,12 +213,24 @@ stands for 1 minutes and then turns right for 5 minutes. This is shown by the ch
 power consumption, the energy consumed by devices other than motors,
 e.g. mainboard, CPU, camera, etc. has to be added. It is the power
 consumption of the robot in an idle state (all motors are off), and measured to be 33 W.
+
 \begin{figure}
   \centering
-  \inputtikz{battery}
-  \caption{Power consumption of the real and the simulated robot in action.
-    The electric current is the summary of all motors.}
-  \label{fig:battery}
+  \begin{minipage}{0.49\columnwidth}
+    \centering
+    \pgfplotsset{width=0.9\columnwidth,height=7cm}
+    \inputtikz{battery}
+    \caption{Power consumption of the real and the simulated robot in action.
+      The electric current is the summary of all motors.}
+    \label{fig:battery}
+  \end{minipage}\hfill{}
+  \begin{minipage}{0.49\columnwidth}
+    \centering
+    \pgfplotsset{width=0.9\columnwidth,height=7cm}
+    \inputtikz{joint-temp-LKneePitch}
+    \caption{The temperature of the (knee pitch) motor in the simulation and the real robot. The green background is the electric current in the real robot.}
+    \label{fig:joint-temperature}
+  \end{minipage}
 \end{figure}
 
 \paragraph{Temperature Regulation}
@@ -265,13 +285,6 @@ A sequence values of $\Delta{}t$, $T_t$, and $I^2R$ can be measured by experimen
 \end{table}
 
 After determining the parameters in the \cref{eq:motor-temp}, we can use this model to simulate motor temperature. In \Cref{fig:joint-temperature}, the simulated temperature is compared with data from the real robot.
-\begin{figure}
-  \centering
-  \pgfplotsset{width=0.88\columnwidth}
-  \inputtikz{joint-temp-LKneePitch}
-  \caption{The temperature of the (knee pitch) motor in the simulation and the real robot. The green background is the electric current in the real robot. The result shows the simulated temperature is very close to the values of the real robot.}
-  \label{fig:joint-temperature}
-\end{figure}
 
 The whole process of joint simulation is summarized in
 \Cref{fig:joint}: stiffness $k_s$ is simulated by setting the maximum torque
@@ -309,7 +322,7 @@ wanted to have several variations of a robot, you should have defined several
 separate robot models. To better support games with heterogeneous robots, we have
 added the support for parametric models to simspark. Therefore, it is possible to
 define models in which a number of parameters are variables and can have different
-values for different robot variations. When you want to load such a model, you shold 
+values for different robot variations.\todo[color=green]{which parameters? for example} When you want to load such a model, you shold 
 specify which type of that robot is needed and its parameters are replaced in the
 parametric model and the model is created. 
 
@@ -320,7 +333,7 @@ parametric model and the model is created.
 \section{Applications}
 
 \paragraph{RoboCup Soccer Simulation League}
-In RoboCup 2004, SimSpark was successfully used for the first official competition in RoboCup Simulation 3D League. Since then, it is used as a standard research platform and test bed. By using it, simulation teams not only have designed and tested new algorithms, but also developed useful research tools based on SimSpark. Some of these tools are released as open source also. For example, roboviz\todo{brief description of roboviz}
+In RoboCup 2004, SimSpark was successfully used for the first official competition in RoboCup Simulation 3D League. Since then, it is used as a standard research platform and test bed\todo{How many teams in last RoboCup?}. By using it, simulation teams not only have designed and tested new algorithms, but also developed useful research tools based on SimSpark. Some of these tools are released as open source also. For example, roboviz\todo{brief description of roboviz}
 
 \paragraph{Usage for Real Robot}
 As one of the long term goals of the soccer simulation is to aim for realism the long term objective are realistic humanoid players in a physical environment.
@@ -334,7 +347,7 @@ Furthermore, Nao Team Humboldt also promotes the usage of SimSpark in the Standa
 
 \begin{figure}
   \centering
-  \includegraphics[width = 0.95\columnwidth]{simspark-spl}
+  \includegraphics[width = 0.75\columnwidth]{simspark-spl}
   \caption{Prototype of the extended SimSpark for Standard Platform League.
     The bottom of screen are images of robot cameras.}
   \label{f:simspark-spl}
@@ -348,6 +361,8 @@ module test from the robotic hardware.
 
 
 \section{Conclusion and Future Work}
+
+SimSpark is a powerful tool to state different multi-agent research questions.
 
 \todo[inline]{Other physic engine, Bullet}
 \todo[inline]{better GUI}
