--- a/trunk/spark/doc/papers/2013/opensource.tex
+++ b/trunk/spark/doc/papers/2013/opensource.tex
@@ -67,7 +67,7 @@ Using simulation for algorithm development and testing makes thing easier.
 
 % \paragraph{History}
 \textit{SimSpark}, a multi-robot simulator based on the generic components of the Spark\cite{OR05} physical multi-agent simulation system, has been used in the RoboCup Soccer Simulation League since 2004.
-The project was registered as open source project in SourceForge\footnote{\url{http://simspark.sourceforge.net}} in 2004, it has an established code base with development increasing year-over-year.
+The project was registered as open source project in SourceForge in 2004, it has an established code base with development increasing year-over-year.
 As the result, RoboCup soccer simulations have changed significantly over the years, going from rather abstract agent representations to more and more realistic humanoid robot games\cite{Boedecker2008,usermanual}.
 Thanks to the flexibility of the Spark system, these transitions were achieved with little changes to the simulator’s core architecture.
 
@@ -84,17 +84,6 @@ Finally, we will outline future development plans in section \ref{s:conclusion} 
 \section{Project Overview}
 \label{s:overview}
 Because last paper about simspark was in 2008
-
-In comparison to specialized simulators, users can create new simulations by using a scene description language.
-
-Agents communicate with the simulation server via UDP or TCP, and therefore can be implemented in any language that supports such sockets.
-\todo{integrated agent as well}
-Multiple software agents can participate in one simulation.
-
-Simulations are created within the server using the Ruby language and text-based RSG files.
-SimSpark uses the Open Dynamics Engine (ODE) for detecting collisions and for simulating rigid body dynamics. ODE allows accurate simulation of the physical properties of objects such as velocity, inertia and friction.
-
-The soccer simulation for this tournament was developed in parallel with the SimSpark simulator. In its initial version players were modeled as spheres in a physical three dimensional world. Since then SimSpark grew considerably and now supports humanoid players with articulated bodies.
 
 % \subsection{Architectural Changes (?)}
 It served from the beginning as a test bed and a guide for essential new features that were added to the simulator during development. However changes to the simulator core were never customized for the soccer simulation. Instead generic simulator services were implemented with all soccer specific details contained in a set of plugins and applications. Until 2008, soccer simulation and SimSpark simulator were developed and released as a single project called rcssserver3d, but it was already decided that they should be separated 
@@ -113,7 +102,21 @@ to CMake, and windows installers are now released.
 
 \section{Spark}
 \label{s:spark}
-\subsection{New Sensors}
+
+In comparison to specialized simulators, users can create new simulations by using a scene description language.
+
+Agents communicate with the simulation server via UDP or TCP, and therefore can be implemented in any language that supports such sockets.
+\todo{integrated agent as well}
+Multiple software agents can participate in one simulation.
+
+Simulations are created within the server using the Ruby language and text-based RSG files.
+SimSpark uses the Open Dynamics Engine (ODE) for detecting collisions and for simulating rigid body dynamics. ODE allows accurate simulation of the physical properties of objects such as velocity, inertia and friction.
+
+\todo{Internal/External Monitor}
+
+\todo{logfiles}
+
+\subsection{Robot Sensors}
  - ACC
  - FRP (Force Resistance Perceptor)
  - Gyro
@@ -121,11 +124,11 @@ to CMake, and windows installers are now released.
  -- Line perceptions
  -- camera (image)
 
-\todo[inline]{sync mode (simspark)}
-\todo[inline]{integrated agents (simspark)}
-\todo[inline]{physics simulation engine abstraction (simspark)}
+\subsection{sync mode}
 
-\paragraph{Multi-threads Supporting\todo{agent controls}}
+\subsection{physics simulation engine abstraction}
+
+\subsection{Multi-threads Supporting}\todo{agent controls}
 In modern time, computers have a CUP with multi-cores or even multi-CPUs.
 This improves the performance greatly, but only the multi-threaded program can benefit.
 One great feature of SimSpark is switching between single thread mode and multi-threads
@@ -140,29 +143,27 @@ the physics engine and \textit{SimControlNode}s interact through the \textit{act
 As we know, the physics computation is the most time-consuming, and the physics engine does not need to access the active scene during physics computation.
 So the physics computation and \textit{SimControlNode}s can run in parallel.\todo[color=green]{UML?}\todo[color=yellow]{results of performance improvement, any benchmark?}
 
-\todo[inline]{
+\todo{
 Sander van Dijk and Ubbo Visser
 Proposal: Boosting the 3D SSL Simulator
 Increase Research Possibilities in the RC SSL Community
 
-ODE TBB, ??sander's paper -- where??}\footnote{\url{http://www.robocup.org/2011/03/robocup-federation-call-for-project-proposals-2/}}
-
-\todo[inline]{Internal/External Monitor}
-
-\todo[inline]{logfiles}
+ODE TBB, ??sander's paper -- where??}
 
 \section{RCSSServer3D}
 \label{s:rcssserver3d}
-\todo[inline]{robot model: NAO (rcssserver3d)}
-\todo[inline]{soccer rules (referee) (rcssserver3d)}
-\todo[inline]{bigger fields and more robots (rcssserver3d)}
+
+The soccer simulation for this tournament was developed in parallel with the SimSpark simulator. In its initial version players were modeled as spheres in a physical three dimensional world. Since then SimSpark grew considerably and now supports humanoid players with articulated bodies.
+
+\subsection{NAO Robot}
+\subsection{Soccer Simulation}
 
 \section{Experimental Features}
 \label{s:ongoing}
 These features are experimental, they (probably) will be used in RoboCup 2013 for the first time. (Some of them are still under the development)
 
 \subsection{Realistic Motor}
-\todo{motivation: my email...}
+\todo{motivation: my email...}\todo{cite my thesis}
 \todo{shorter}
 NAO robot has twenty-one motor joints as its actuators.
 The simple motor model is one reason for the unrealistic simulation results.
@@ -389,12 +390,15 @@ Simulation Server 3D}
 \section{Applications}
 \label{s:application}
 \paragraph{RoboCup Soccer Simulation League}
-In RoboCup 2004, SimSpark was successfully used for the first official competition in RoboCup Simulation 3D League. Since then, it is used as a standard research platform and test bed\todo{How many teams in last RoboCup?}. By using it, simulation teams not only have designed and tested new algorithms, but also developed useful research tools based on SimSpark. Some of these tools are also released as open source.
+In RoboCup 2004, SimSpark was successfully used for the first official competition in RoboCup Simulation 3D League. Since then, it is used as a standard research platform and test bed\todo{How many teams in last RoboCup?}.
+Simulation teams also developed useful research tools based on SimSpark. Some of these tools are also released as open source.
 For example, RoboViz\cite{Stoecker2012} is designed to assess and develop agent behaviors in SimSpark,
 it facilitates the real-time visualization of agents running concurrently on the SimSpark simulator,
-and provides higher-level analysis and visualization of agent behaviors.
+and provides higher-level analysis and visualization of agent behaviors. 
+Combined with these tools, SimSpark becomes a good platform to develop and test new algorithms for multi-robot systems.
+It is also widely used to teach artificial intelligence and robotic lectures.
 
-\paragraph{Usage for Real Robot}
+\paragraph{RoboCup Soccer Standard Platform League}
 As one of the long term goals of the soccer simulation is to aim for realism the long term objective are realistic humanoid players in a physical environment.
 These players should one day challenge the champion of the most recent World Cup.
 The SimSpark is also used by teams in RoboCup Standard Platform League and Humanoid League.
@@ -412,6 +416,7 @@ Furthermore, Nao Team Humboldt also promotes the usage of SimSpark in the Standa
   \label{f:simspark-spl}
 \end{figure}
 
+\paragraph{RoboCup Soccer Humanoid League}
 Of course the simulator can also be extended for other leagues by adding new robot models.
 For example, in RoboCup Humanoid Kid Size League, FUmanoid\cite{Donat2012} uses
 SimSpark to perform multi-level testing methods for archiving higher
@@ -425,7 +430,7 @@ SimSpark is a powerful tool to state different multi-agent research questions.
 
 \todo[inline]{Other physic engine, Bullet}
 \todo[inline]{better GUI}
-
+\todo[inline]{more robot models?}
 \section*{Acknowledgments}
 
 \bibliographystyle{splncs03}
